@@ -12,7 +12,7 @@
 (defsystem asdf-install
   #+:sbcl :depends-on
   #+:sbcl (sb-bsd-sockets)
-  :version "0.6.10-ABCL.0"
+  :version "0.6.10-ABCL.1"
   :author "Dan Barlow <dan@telent.net>, Edi Weitz <edi@agharta.de> and many others. See the file COPYRIGHT for more details."
   :maintainer "Gary Warren King <gwking@metabang.com>"
   :components ((:file "defpackage")
