@@ -384,12 +384,15 @@
     (pushnew tmp *temporary-files*)
     (values (download-url-to-file url tmp) tmp)))
 
+(defun gpg-command () 
+  (find-shell-command *gpg-command*))
+
 (defun gpg-results (package signature)
   (let ((tags nil))
     (with-input-from-string
 	(gpg-stream 
 	 (shell-command (format nil "~s --status-fd 1 --verify ~s ~s"
-                                *gpg-command*
+                                (gpg-command)
 				(namestring signature) (namestring package))))
       (loop for l = (read-line gpg-stream nil nil)
 	 while l
