@@ -13,7 +13,9 @@ Features
 
 * [svn r12994] New java-interop macros: CHAIN and JMETHOD-LET
 
-* [svn r13031] Ensure that the ASDF registry contains the ASDF-INSTALL locations.
+* [svn r13030-31,r13034] ASDF-INSTALL improvements: Ensure that the
+     ASDF registry contains the ASDF-INSTALL locations.  Better
+     resolution mechanism for 'gpg' binary.
 
 Fixes
 -----
